Try to stop flickering.

--- a/css/_ui.less
+++ b/css/_ui.less
@@ -42,10 +42,13 @@ body, .page {
 	display: -webkit-box;
 	-webkit-box-orient: vertical;
 	-webkit-box-align: stretch;
-	-webkit-box-flex: 1
+	-webkit-box-flex: 1;
 }
 .page {
   position:absolute;
+  -webkit-backface-visibility: hidden;
+	-webkit-perspective: 1000px;
+	transform: translate3d(0,0,0);
 }
 section, .page-content {
 	display: -webkit-box;
